fixing image of me on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,6 +159,7 @@ footer{
     float:left;
     width:185px;
     image-orientation: from-image;
+    transform:rotate(90deg);
   }
 
   .bioPara{
